# spt_target_uploader

./: .env.shared  .gitignore  README.md  admin-login.py  app.py  generate_cli_readme.bash  pyproject.toml  requirements.txt  uploader-admin.py
.github/ISSUE_TEMPLATE/: bug_report.md  general-issues.md
.github/workflows/: build_docs_dev.yml  build_docs_prod.yml  codacy.yml  codeql.yml
data/ppc_lists/: targets_28955ef97438a6d6.ecsv  targets_449b8f03f444d9f8.ecsv  targets_c765361475afc8a6.ecsv  targets_d743df613204c11f.ecsv
data/psl_lists/: targets_28955ef97438a6d6.ecsv  targets_449b8f03f444d9f8.ecsv  targets_c765361475afc8a6.ecsv  targets_d743df613204c11f.ecsv
data/target_lists/: targets_28955ef97438a6d6.ecsv  targets_449b8f03f444d9f8.ecsv  targets_c765361475afc8a6.ecsv  targets_d743df613204c11f.ecsv
docs/: mkdocs.yml
docs/docs/: PPP.md  about.md  cli.md  contact.md  developer.md  index.md  inputs.md  issues.md  submission.md  todo.md  validation.md
docs/docs/examples/: example_admin_pslID.csv  example_perseus_cluster_r60arcmin.csv  example_ppclist.csv  example_targetlist.csv  example_targetlist_random10.csv  example_targetlist_random100.csv
docs/docs/stylesheets/: extra.css
src/pfs_target_uploader/: pn_admin.py  pn_app.py  utils.py  widgets.py
src/pfs_target_uploader/cli/: cli_main.py  simulate_pointings.py  validate_targetlist.py
src/pfs_target_uploader/utils/: __init__.py  checker.py  db.py  io.py  mail.py  ppp.py  session.py  setup_instdata.py
src/pfs_target_uploader/widgets/: AnnouncementNoteWidgets.py  DatePickerWidgets.py  DocLinkWidgets.py  ExpTimeWidgets.py  FileInputWidgets.py  ObsTypeWidgets.py  PPCInputWidgets.py  PppResultWidgets.py  StatusWidgets.py  TargetWidgets.py  TimerWidgets.py  UploadNoteWidgets.py  ValidationResultWidgets.py  __init__.py  buttons.py
templates/: admin_login.html.jinja2  basic_login.html  basic_login_admin.html
