[project]
name = "pfs_target_uploader"
dynamic = ["version"]
description = "Target uploader for PFS openuse"
authors = [{ name = "Masato Onodera", email = "monodera@naoj.org" }]
dependencies = [
    "astropy>=5.3.1",
    "colorcet>=3.0.1",
    "fontawesome-markdown @ https://github.com/bmcorser/fontawesome-markdown/archive/master.zip",
    "holoviews>=1.17.1",
    "logzero>=1.7.0",
    "loguru>=0.7.2",
    "markdown-it-py>=3.0.0",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-material[imaging]>=9.5.4",
    "mkdocs>=1.4.3",
    "multiprocess>=0.70.15",
    "myst-parser>=2.0.0",
    "pandas>=2.0.3",
    "panel>=1.3",
    "pybind11>=2.11.1",
    "python-dotenv>=1.0.0",
    "qplan @ git+https://github.com/naojsoft/qplan.git",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.2",
    "setuptools>=68.2.2",
    "gurobipy>=10,<11",
    "pfs-utils @ git+https://github.com/Subaru-PFS/pfs_utils.git",
    "astroplan>=0.9",
    "hvplot>=0.8.4",
    "ics-cobraOps @ git+https://github.com/Subaru-PFS/ics_cobraOps.git",
    "ets-fiber-assigner @ git+https://github.com/Subaru-PFS/ets_fiberalloc.git",
    "wheel>=0.41.2",
    "dask>=2023.10.1",
    "datashader>=0.16.0",
    "spatialpandas>=0.4.9",
    "pyinstrument>=4.6.0",
    "snakeviz>=2.2.0",
    "memray>=1.10.0",
    "mkdocs-video>=1.5.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pfs_validate_targetlist = "pfs_target_uploader.cli.validate_targetlist:main"
pfs_simulate_pointings = "pfs_target_uploader.cli.simulate_pointings:main"

[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pfs_target_uploader.__version__" }

[tool.pdm.dev-dependencies]
dev = [
    "-e git+https://github.com/Subaru-PFS/ics_cobraCharmer.git#egg=ics-cobraCharmer",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "ipython>=8.14.0",
    "pip>=23.2.1",
]

[tool.pdm.scripts]
serve-doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
build-doc = { shell = "cd docs && mkdocs build", help = "Build documentation" }
serve-app = { cmd = [
    "pdm",
    "run",
    "panel",
    "serve",
    "./app.py",
    "./admin.py",
    "--static-dirs",
    "doc=docs/site",
    "data=data",
    # "\"uploader/data\"=data",
    "--prefix=uploader",
    "--websocket-max-message-size=104857600",
    "--port",
    "5008",
    "--autoreload",
], help = "Start the dev server for app and admin pages" }
gen-requirements = { cmd = [
    "pdm",
    "export",
    "--format",
    "requirements",
    "--without-hashes",
    "--pyproject",
    "--dev",
    "--output",
    "requirements.txt",
    "--verbose",
], help = "Generate requirements.txt" }


[tool.pdm.options]
add = ["--no-isolation"]
install = ["--no-isolation"]

# [tool.pdm.options]
# add = ["--no-isolation", "--no-self"]
# install = ["--no-isolation", "--no-self"]
# add = ["--no-isolation"]
# install = ["--no-isolation"]
# lock = ["--no-cross-platform"]

# [tool.black]
# line-length = 120
# target-version = ["py39", "py310", "py311"]
# target-version = ["py311"]
